--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 CONNECTIONSTRING=mongodb+srv://todoAppUser:H4CK3R98@cluster0-nnacu.mongodb.net/vthink?retryWrites=true&w=majority
 PORT=3000
+JWTSECRET=iamtheprinceofallsaiyans007
